--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "iconsax-reactjs": "^0.0.8",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "swiper": "^11.2.10"
